Fix update z-index of card back to sit above front image when flipped

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,7 @@ body {
     -webkit-transform: rotateY(180deg);
     -moz-transform: rotateY(180deg);
     -o-transform: rotateY(180deg);
+    z-index: 1;
 }
 
 /*this allows the card rotation effect */
